fix messenger style (overflow)

--- a/src/App.css
+++ b/src/App.css
@@ -82,13 +82,34 @@
 }
 
 .chattyMessagesBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-top: 25px;
+  margin-bottom: 15px;
+  border: 1px solid #414141;
+  border-radius: 20px;
+  padding: 10px;
   widows: 300px;
   height: 500px;
+  width: 50%;
   overflow-y: auto;
 }
 
-.messageBox {
+.singleMessage {
+  float: left;
+  width: auto;
+  height: auto;
+  margin-top: 10px;
+  margin-left: 6px;
   background-color: #414141;
+  border-radius: 25px;
+  padding: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: 16px;
+  font-family: 'Handlee';
+  color: #ffffff;
 }
 
 .chattyIcon {
